@@ -1,20 +1,0 @@
-version: '{build}'
-skip_tags: true
-skip_commits:
-  message: /\[ci skip\]/
-clone_depth: 10
-environment:
-  TERM: dumb
-  matrix:
-    - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-install:
-  - SET PATH=%JAVA_HOME%\bin;%PATH%
-  # remove Ruby entry (C:\Ruby193\bin;) from PATH
-  - SET PATH=%PATH:C:\Ruby193\bin;=%
-  - echo %PATH%
-  - java -version
-  - gradlew.bat --version
-build_script:
-  - gradlew.bat -u -i assemble
-test_script:
-  - gradlew.bat -u -i -S check
