@@ -2,7 +2,7 @@
     adding the plugin jars to the classpath to apply them later.
     currently the new plugins DSL does apply them directly.
     there are other limitations too. See https://docs.gradle.org/current/userguide/plugins.html#sec:plugins_block
-    we don't need to apply the jruby and bintray plugin on the rootProject.
+    we don't need to apply the jruby plugin on the rootProject.
 */
 buildscript {
   repositories {
@@ -31,12 +31,10 @@ ext {
   statusIsRelease = (status == 'release')
 
   // jar versions
-  arquillianVersion = '1.1.10.Final'
-  arquillianSpockVersion = '1.0.0.Beta3'
   jrubyVersion = '9.4.0.0'
   pdfboxVersion = '3.0.0'
-  junitVersion = '4.13.2'
-  hamcrestVersion = '2.2'
+  junitVersion = '5.10.0'
+  assertjVersion = '3.24.2'
 
   // gem versions
   asciidoctorJVersion = project.hasProperty('asciidoctorJVersion') ? project.asciidoctorJVersion : '2.5.7'
@@ -47,7 +45,6 @@ ext {
   public_suffixVersion = '1.4.6'
   prawnGemVersion=project.hasProperty('prawnGemVersion') ? project.prawnGemVersion : '2.4.0'
   rghostGemVersion = '0.9.7'
-  spockVersion = '0.7-groovy-2.0'
   threadSafeGemVersion = '0.3.6'
   ttfunkGemVersion = '1.7.0'
   cssParserGemVersion = '1.12.0'
@@ -63,7 +60,6 @@ subprojects {
   // NOTE applying Java plugin changes the status; take steps to preserve value
   def _status = status
   apply plugin: 'java'
-  apply plugin: 'groovy'
   apply from: "$rootDir/gradle/providedConfiguration.gradle"
 
   status = _status
@@ -100,13 +96,14 @@ subprojects {
   }
 
   dependencies {
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "org.hamcrest:hamcrest-library:$hamcrestVersion"
-    testImplementation "org.jboss.arquillian.junit:arquillian-junit-container:$arquillianVersion"
-    testImplementation "org.jboss.arquillian.spock:arquillian-spock-container:$arquillianSpockVersion"
+    testImplementation(platform("org.junit:junit-bom:$junitVersion"))
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
   }
 
   test {
+    useJUnitPlatform()
     forkEvery = 10
     minHeapSize = '128m'
     maxHeapSize = '1024m'
